Fix agency heading logo alignment issue

--- a/css/src/_content-heading-image.scss
+++ b/css/src/_content-heading-image.scss
@@ -1,17 +1,19 @@
 .content-heading-image {
+	@include xy-grid(horizontal, false);
+
+	justify-content: center;
+	align-content: center;
+	align-items: center;
 	position: relative;
 	max-height: 500px;
 	overflow: hidden;
-
-	& > img {
-		height: 100%;
-	}
 
 	.logo-wrap {
 		@include xy-grid;
 
 		justify-content: center;
 		align-content: center;
+		align-items: center;
 		position: absolute;
 		top: 0;
 		z-index: 2;
